--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,5 +1,23 @@
 @import "tailwindcss";
 
-.saika{
-    @apply bg-blue-500 text-white py-2 px-4 rounded-lg;
+@theme {
+  /* Fonts */
+  --font-primary: Poppins, serif;
+  --font-secondary: Poppins, sans-serif;
+  /* Text Colors */
+  --color-text-primary: rgb(59, 60, 100);
+  --color-text-secondary: rgb(90, 90, 130);
+  /* Typography Sizes (mobile-first) */
+  --text-title-sm: 1.2rem;
+  --text-heading-sm:1.5rem;
+  --text-para-sm:1.2rem;
+  /* Typography Tablet Sizes */
+  --text-title-md: 1.5rem;
+  --text-heading-md:3.5rem;
+  --text-para-md:1.4rem;
+  /* Typography Size Laptop */
+  --text-heading-lg: 3.5rem;
+  --text-para-lg: 2.10rem;
 }
+
+
